[tool.poetry]
name = "stiliodht"
version = "0.1.0"
description = ""
authors = ["seik <ivanmartinga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.930"
better-bencode = "^0.2.1"
expiringdict = "^1.2.1"
nest-asyncio = "^1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
